# 3PC

./: CMakeLists.txt  README.md  Readme.txt
src/: Main.cpp
src/communication/: ICommunicator.h  ITaggedCommunicator.h  MpiOptimizedCommunicator.cpp  MpiOptimizedCommunicator.h  MpiSimpleCommunicator.cpp  MpiSimpleCommunicator.h
src/logging/: ConsoleColor.h  Logger.cpp  Logger.h
src/processes/: AbstractCrashableProcess.h  AbstractProcess.h  CohortMember.h  Coordinator.h
src/util/: Define.h  MultiprocessDebugHelper.cpp  MultiprocessDebugHelper.h  Random.cpp  Random.h  StringConcat.h  Utils.h
